fix(welcome): remove blue gap on phones by tightening hero height/padding; desktop unchanged

--- a/src/app/welcome/welcome-component.responsivity.css
+++ b/src/app/welcome/welcome-component.responsivity.css
@@ -22,7 +22,7 @@
 @media screen and (max-width: 720px) {
     #welcome {
         height: auto;
-        padding: 3em 1.5em 4em;
+        padding: 3em 1.5em 0;
     }
 
     .layer_one {
@@ -57,7 +57,7 @@
 
 @media screen and (max-width: 600px) {
     #welcome {
-        padding: 2.5em 1.25em 3.5em;
+        padding: 2.5em 1.25em 0;
         height: auto;
     }
     
@@ -68,7 +68,7 @@
 
 @media screen and (max-width: 500px) {
     #welcome {
-        padding: 2em 1.25em 3em;
+        padding: 2em 1.25em 0;
     }
     
     .layer_one .avatar-container .illustration {
@@ -78,7 +78,7 @@
 
 @media screen and (max-width: 320px) {
     #welcome {
-        padding: 1.5em 1em 2.5em;
+        padding: 1.5em 1em 0;
     }
     
     .layer_one .avatar-container .illustration {
